[package]
name = "vrt"
description = "Parser/encoder for VITA Radio Transport data"
license = "MIT"
keywords = ["VRT", "parser", "nom"]
homepage = "https://github.com/littleairmada/vrt-rs"
repository = "https://github.com/littleairmada/vrt-rs"
version = "0.1.0"
authors = ["Blair Gillam <ns1h@airmada.net>"]
categories = ["parser-implementations"]
edition = "2021"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom-derive = "0.10.1"
rusticata-macros = "4.1.0"
