[package]
name = "vrt"
description = "Parser/encoder for VITA Radio Transport data"
license = "MIT"
keywords = ["VRT", "parser", "nom"]
homepage = "https://github.com/littleairmada/vrt-rs"
repository = "https://github.com/littleairmada/vrt-rs"
version = "0.2.1"
authors = ["Blair Gillam <ns1h@airmada.net>"]
categories = ["parser-implementations"]
edition = "2021"
readme = "README.md"
publish = true

[dependencies]
nom = "8"
thiserror = { version = "2.0.9", default-features = false }

[dev-dependencies]
rstest = "0.24.0"
